Moved the map generation code to the server

--- a/client/index.html
+++ b/client/index.html
@@ -74,7 +74,7 @@
             <div id="console"></div>
             
             <div>
-                <textarea rows="1"></textarea>
+                <textarea rows="1" autofocus></textarea>
             </div>
         </div>
         
